Bug 394899 - System Settings crashes when selecting activities on wayland
Summary: System Settings crashes when selecting activities on wayland
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_activities (other bugs)
Version First Reported In: 5.12.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords: wayland-only
: 398655 418291 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-05-31 14:20 UTC by Luigi Baldoni
Modified: 2020-10-22 11:50 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20.2
Sentry Crash Report:


Attachments
systemsettings 5 crash on wayland (1.88 KB, text/x-log)
2018-05-31 14:20 UTC, Luigi Baldoni
Details
activities-kcm (36.30 KB, image/png)
2019-11-24 19:28 UTC, Miroslav Spehar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luigi Baldoni 2018-05-31 14:20:33 UTC
Created attachment 112984 [details]
systemsettings 5 crash on wayland

Using openSUSE Leap 15.0, when clicking on Activities back and forth, systemsettings5 invariably crashes.

The distro maintainer surmises that the KCM should use QQuickWidget instead of QQuickView.

See attached log.
Comment 1 Fabian Vogt 2018-05-31 17:09:44 UTC
See also https://phabricator.kde.org/D11045 and https://phabricator.kde.org/D11066 for similiar changes to other KCMs.
Comment 2 Ivan Čukić 2018-07-23 08:33:38 UTC
This needs to be handled by somebody who uses Wayland which I'm currently not able to.
Comment 3 Patrick Silva 2018-09-15 14:05:58 UTC
*** Bug 398655 has been marked as a duplicate of this bug. ***
Comment 4 Miroslav Spehar 2019-11-24 19:28:14 UTC
Created attachment 124103 [details]
activities-kcm

on fedora it does not crash, but shows as it is on the attached pic

fedora 31
kf 5.61.0
qt 5.12.5
plasma 5.16.5
kernel 5.3.11
Comment 5 David Edmundson 2019-11-24 19:57:48 UTC
You absolutely are able to use Wayland. 
Worst case run Kwin_compose=q before starting.
Comment 6 Oded Arbel 2020-06-25 09:24:20 UTC
Possibly a dup of bug #418291 ?
Comment 7 Nate Graham 2020-10-12 20:56:56 UTC
*** Bug 418291 has been marked as a duplicate of this bug. ***
Comment 8 Bug Janitor Service 2020-10-21 12:34:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/197
Comment 9 David Edmundson 2020-10-22 11:49:16 UTC
Git commit 8d33d2d7372308d0b1f4d3ab7af645ebe9677e83 by David Edmundson.
Committed on 22/10/2020 at 11:49.
Pushed by davidedmundson into branch 'master'.

[kcms/activities] Port to QQuickWidget from nested QQuickWindows

Nested QQuickWindows are still somewhat problematic especially when used
in systemsettings which is already a very hybrid mix.

At some point this will all be fully ported to QtQuick anyway, there
isn't anything especially complex going on in the UI that isn't QtQuick
already. This is a small backportable patch to supress the bugs.
Related: bug 423682, bug 416253
Fixed-in: 5.20.0

M  +5    -12   kcms/activities/ActivitiesTab.cpp
M  +2    -2    kcms/activities/ActivitiesTab.h
M  +1    -0    kcms/activities/CMakeLists.txt
M  +3    -13   kcms/activities/PrivacyTab.cpp
M  +6    -3    kcms/activities/imports/dialog.cpp
M  +44   -46   kcms/activities/ui/PrivacyTabBase.ui
D  +0    -57   kcms/activities/utils.h

https://invent.kde.org/plasma/plasma-desktop/commit/8d33d2d7372308d0b1f4d3ab7af645ebe9677e83
Comment 10 David Edmundson 2020-10-22 11:49:58 UTC
Git commit 7079d0952b313b636126c39f0437ff6ba8687ca7 by David Edmundson.
Committed on 22/10/2020 at 11:49.
Pushed by davidedmundson into branch 'Plasma/5.20'.

[kcms/activities] Port to QQuickWidget from nested QQuickWindows

Nested QQuickWindows are still somewhat problematic especially when used
in systemsettings which is already a very hybrid mix.

At some point this will all be fully ported to QtQuick anyway, there
isn't anything especially complex going on in the UI that isn't QtQuick
already. This is a small backportable patch to supress the bugs.
Related: bug 423682, bug 416253
Fixed-in: 5.20.0


(cherry picked from commit 8d33d2d7372308d0b1f4d3ab7af645ebe9677e83)

M  +5    -12   kcms/activities/ActivitiesTab.cpp
M  +2    -2    kcms/activities/ActivitiesTab.h
M  +1    -0    kcms/activities/CMakeLists.txt
M  +3    -13   kcms/activities/PrivacyTab.cpp
M  +6    -3    kcms/activities/imports/dialog.cpp
M  +44   -46   kcms/activities/ui/PrivacyTabBase.ui
D  +0    -57   kcms/activities/utils.h

https://invent.kde.org/plasma/plasma-desktop/commit/7079d0952b313b636126c39f0437ff6ba8687ca7