[kcms/activities] Port to QQuickWidget from nested QQuickWindows

Nested QQuickWindows are still somewhat problematic especially when used
in systemsettings which is already a very hybrid mix.

At some point this will all be fully ported to QtQuick anyway, there
isn't anything especially complex going on in the UI that isn't QtQuick
already. This is a small backportable patch to supress the bugs.

BUG: 394899
BUG: 423682
BUG: 416253
Fixed-in: 5.20.0